# pxldraw

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
.gemini/: GEMINI.md
examples/: draw-grid-png.rs
src/: buffer.rs  core.rs  lib.rs  target.rs
src/buffer/: alloc.rs  impl_target.rs
