[package]
name = "pxldraw"
edition = "2024"
license = "MIT"

description = "2D software pixel renderer"
repository = "https://github.com/crates-lurey-io/pxldraw"
version = "0.0.0-reserved"

[lints.clippy]
pedantic = "deny"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
just = { version = "1.40.0" }
taplo-cli = { version = "0.10.0", bins = ["taplo"] }

[dependencies]
alpha-blend = "0.1.2"
bytemuck = "1.23.1"
grixy = { git = "https://github.com/crates-lurey-io/grixy", rev = "5f50e50a15d2d3a688a8ea70360e766dea45d7c3", features = [
  "bytemuck",
] }
pxlfmt = { git = "https://github.com/crates-lurey-io/pxlfmt", rev = "726cbcaec25afc331cb33072dcfa6a2e171b87c2", features = [
  "bytemuck",
] }

[dev-dependencies]
bytemuck = "1.23.1"
open = "5.3.2"
png = "0.17.16"

[features]
default = []
alloc = ["grixy/alloc"]
