[package]
name = "pxldraw"
edition = "2024"
license = "MIT"

description = "2D software pixel renderer"
repository = "https://github.com/crates-lurey-io/pxldraw"
version = "0.1.1"

[lints.clippy]
pedantic = "deny"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
just = { version = "1.40.0" }
taplo-cli = { version = "0.10.0", bins = ["taplo"] }

[dependencies]
grixy = { version = "0.4.0" }
pxlfmt = { version = "0.4.0" }

[dev-dependencies]
bytemuck = "1.23.1"
open = "5.3.2"
png = "0.17.16"

[features]
default = []
alloc = ["grixy/alloc"]
bytemuck = ["grixy/bytemuck", "pxlfmt/bytemuck"]
